# contacts

./: Cargo.toml  config.yml
src/: main.rs
src/command/: add.rs  delete.rs  edit.rs  find.rs  mod.rs
src/configs/: mod.rs
src/csv/: mod.rs
src/domain/: contact.rs
src/validation/: mod.rs
v2/: contacts.csv
