[package]
name = "contacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
regex = "1.7.1"
lazy_static = "1.4.0"
itertools = "0.9.0"
clap = { version = "3.1.6", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.21"
